Fixed issue #10495: Missing padding when browsing responses
Added jqgrid css from 2.06 and did some tweaking to it. More
changes will be necessary.

--- a/styles/Sea_Green/css/jqgrid.css
+++ b/styles/Sea_Green/css/jqgrid.css
@@ -316,14 +316,10 @@ tr.ui-search-toolbar select {
 }
 
 .ui-jqgrid .ui-pg-input {
-    height: 13px;
-    margin: 0
 }
 
 .ui-jqgrid .ui-pg-selbox {
-    line-height: 18px;
     display: block;
-    height: 18px;
     margin: 0
 }
 
